avoid scrollbars in pdf preview

--- a/ckan/public/base/datapreview/css/pdfpreview.css
+++ b/ckan/public/base/datapreview/css/pdfpreview.css
@@ -1,3 +1,4 @@
 body {
   height: 400px;
+  overflow: hidden;
 }
